; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_atombios.c_radeon_atom_set_voltage.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_atombios.c_radeon_atom_set_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }
%union.set_voltage = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32, i8*, i32 }
%struct.TYPE_5__ = type { i32, i32, i32 }
%struct.TYPE_6__ = type { i32, i8*, i32 }

@COMMAND = common dso_local global i32 0, align 4
@SetVoltage = common dso_local global i32 0, align 4
@SET_ASIC_VOLTAGE_MODE_ALL_SOURCE = common dso_local global i32 0, align 4
@SET_ASIC_VOLTAGE_MODE_SET_VOLTAGE = common dso_local global i32 0, align 4
@ATOM_SET_VOLTAGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Unknown table version %d, %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @radeon_atom_set_voltage(%struct.radeon_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.radeon_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %union.set_voltage, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %12 = load i32, i32* @COMMAND, align 4
  %13 = load i32, i32* @SetVoltage, align 4
  %14 = call i32 @GetIndexIntoMasterTable(i32 %12, i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %5, align 4
  store i32 %15, i32* %11, align 4
  %16 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %17 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @atom_parse_cmd_header(i32 %19, i32 %20, i32* %9, i32* %10)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %3
  br label %74

24:                                               ; preds = %3
  %25 = load i32, i32* %5, align 4
  %26 = icmp eq i32 %25, 65281
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  br label %74

28:                                               ; preds = %24
  %29 = load i32, i32* %10, align 4
  switch i32 %29, label %62 [
    i32 1, label %30
    i32 2, label %40
    i32 3, label %51
  ]

30:                                               ; preds = %28
  %31 = load i32, i32* %6, align 4
  %32 = bitcast %union.set_voltage* %7 to %struct.TYPE_5__*
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  %34 = load i32, i32* @SET_ASIC_VOLTAGE_MODE_ALL_SOURCE, align 4
  %35 = bitcast %union.set_voltage* %7 to %struct.TYPE_5__*
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 2
  store i32 %34, i32* %36, align 8
  %37 = load i32, i32* %11, align 4
  %38 = bitcast %union.set_voltage* %7 to %struct.TYPE_5__*
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  store i32 %37, i32* %39, align 4
  br label %66

40:                                               ; preds = %28
  %41 = load i32, i32* %6, align 4
  %42 = bitcast %union.set_voltage* %7 to %struct.TYPE_6__*
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  store i32 %41, i32* %43, align 8
  %44 = load i32, i32* @SET_ASIC_VOLTAGE_MODE_SET_VOLTAGE, align 4
  %45 = bitcast %union.set_voltage* %7 to %struct.TYPE_6__*
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 2
  store i32 %44, i32* %46, align 8
  %47 = load i32, i32* %5, align 4
  %48 = call i8* @cpu_to_le16(i32 %47)
  %49 = bitcast %union.set_voltage* %7 to %struct.TYPE_6__*
  %50 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %49, i32 0, i32 1
  store i8* %48, i8** %50, align 8
  br label %66

51:                                               ; preds = %28
  %52 = load i32, i32* %6, align 4
  %53 = bitcast %union.set_voltage* %7 to %struct.TYPE_7__*
  %54 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %53, i32 0, i32 0
  store i32 %52, i32* %54, align 8
  %55 = load i32, i32* @ATOM_SET_VOLTAGE, align 4
  %56 = bitcast %union.set_voltage* %7 to %struct.TYPE_7__*
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %56, i32 0, i32 2
  store i32 %55, i32* %57, align 8
  %58 = load i32, i32* %5, align 4
  %59 = call i8* @cpu_to_le16(i32 %58)
  %60 = bitcast %union.set_voltage* %7 to %struct.TYPE_7__*
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 1
  store i8* %59, i8** %61, align 8
  br label %66

62:                                               ; preds = %28
  %63 = load i32, i32* %9, align 4
  %64 = load i32, i32* %10, align 4
  %65 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %63, i32 %64)
  br label %74

66:                                               ; preds = %51, %40, %30
  %67 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %68 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %67, i32 0, i32 0
  %69 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 4
  %71 = load i32, i32* %8, align 4
  %72 = bitcast %union.set_voltage* %7 to i32*
  %73 = call i32 @atom_execute_table(i32 %70, i32 %71, i32* %72)
  br label %74

74:                                               ; preds = %66, %62, %27, %23
  ret void
}

declare dso_local i32 @GetIndexIntoMasterTable(i32, i32) #1

declare dso_local i32 @atom_parse_cmd_header(i32, i32, i32*, i32*) #1

declare dso_local i8* @cpu_to_le16(i32) #1

declare dso_local i32 @DRM_ERROR(i8*, i32, i32) #1

declare dso_local i32 @atom_execute_table(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
